--- a/.devcontainer/compose.yml
+++ b/.devcontainer/compose.yml
@@ -4,7 +4,7 @@ services:
   api:
     build:
       context: .
-      dockerfile: dockerfile
+      dockerfile: Dockerfile
     volumes:
       - ../:/api
     command: sleep infinity
